--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
-[build-system]
-requires = ["setuptools>=42", "wheel"]
-build-backend = "setuptools.build_meta"
+[project]
+name = "repl-nix-workspace"
+version = "0.1.0"
+description = "Add your description here"
+requires-python = ">=3.11"
+dependencies = [
+    "matplotlib>=3.10.3",
+    "networkx>=3.5",
+    "numpy>=2.3.1",
+    "pandas>=2.3.1",
+    "plotly>=6.2.0",
+    "scipy>=1.16.0",
+    "streamlit>=1.46.1",
+    "sympy>=1.14.0",
+]
